# api/models/contact.go
@@ -1,0 +1,5 @@
+package models
+
+type ResponseContact_Swagger struct {
+	NoiDung string `json:"noi_dung" binding:"required"`
+}
